Bug 170760 - global color scheme not applied
Summary: global color scheme not applied
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 180099 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-09 18:21 UTC by Becheru Petru-Ioan
Modified: 2009-11-11 23:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Becheru Petru-Ioan 2008-09-09 18:21:51 UTC
Version:           2.1 (using 4.1.1 (KDE 4.1.1), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.26-1-686

* open a Konsole window
* open systemsettings-> appeareance-> Colors
* change to another color scheme
* apply it 
 see that the new color setting is not applied on scrollbars
Comment 1 Becheru Petru-Ioan 2008-09-09 18:23:45 UTC
this bug applies to konsole kpart
Comment 2 Dario Andres 2008-12-27 21:57:18 UTC
I can reproduce it here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.86 (KDE 4.1.86 (KDE 4.2 >= 20081221))
kdelibs svn rev. 902031 / kdebase svn rev. 902032
on ArchLinux x86_64 - Kernel 2.6.27.10

Setting to "minor".
Comment 3 Dario Andres 2009-01-09 14:08:57 UTC
*** Bug 180099 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2009-11-11 23:11:50 UTC
SVN commit 1047721 by cfeck:

Fix scrollbar coloring when changing system colors

BUG: 170760


 M  +4 -0      TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1047721