Fix scrollbar coloring when changing system colors

BUG: 170760

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1047721